# rlgym-learn

./: .gitignore  Cargo.toml  README.md  config.json  example.py  multi_agent_controller_test.py  pyproject.toml  quick_start_guide.py  requirements.txt  setup.py  speed_test.py  speed_test_heavy.py  wandb_test.py
.github/workflows/: CI.yml  CICD.yml
rlgym_learn/: __init__.py  learner.py  learner_config.py  learning_coordinator.py  learning_coordinator_config.py  rlgym_learn.pyi
rlgym_learn/agent/: __init__.py  agent_manager.py  env_action.py
rlgym_learn/api/: __init__.py  agent.py  agent_controller.py  metrics_logger.py  obs_standardizer.py  serdes.py  typing.py
rlgym_learn/env_processing/: communication.py  env_process.py  env_process_interface.py  env_process_interface_old.py  env_process_old.py
rlgym_learn/experience/: timestep.py
rlgym_learn/standard_impl/: __init__.py  metrics_logger.py  numpy_obs_standardizer.py  serdes.py  wrappers.py
rlgym_learn/util/: comm_consts.py  reporting.py
rlgym_learn_backend/: __init__.py  rlgym_learn_backend.pyi
rlgym_ppo/: __init__.py  learner.py  learner_config.py
rlgym_ppo/agent/: agent_manager.py
rlgym_ppo/api/: __init__.py  agent.py  metrics_logger.py  typing.py  wrappers.py
rlgym_ppo/env_processing/: env_process.py  env_process_interface.py
rlgym_ppo/standard_impl/: metrics_logger.py  misc.py
rlgym_ppo/util/: running_stats.py  torch_functions.py
src/: agent_manager.rs  common.rs  communication.rs  env_action.rs  env_process.rs  env_process_interface.rs  env_process_interface_worker_thread.rs  lib.rs  serdes.rs  timestep.rs
src/common/: misc.rs  mod.rs  python_type_enum.rs
src/rocket_league/: math.rs  physics_object.rs
src/serdes/: bool_serde.rs  bytes_serde.rs  complex_serde.rs  dict_serde.rs  dtype_enum.rs  dynamic_serde.rs  float_serde.rs  int_serde.rs  list_serde.rs  mod.rs  numpy_dynamic_shape_serde.rs  option_serde.rs  pickle_serde.rs  pyany_serde.rs  pyany_serde_impl.rs  python_type_enum.rs  serde_dtype_enum.rs  serde_enum.rs  serde_type_enum.rs  set_serde.rs  string_serde.rs  tuple_serde.rs  typed_dict_serde.rs  union_serde.rs
src/standard_impl/: mod.rs  numpy_dtype_enum.rs
(+42 files in other folders)
